--- a/src/style/index.css
+++ b/src/style/index.css
@@ -18,3 +18,62 @@ ul {
   margin: 0;
   padding: 0;
 }
+
+header {
+  height: 70px;
+  background: black;
+}
+
+main {
+  border: 1px solid red;
+  display: flex;
+}
+
+footer {
+  border: 1px solid red;
+  height: 110px;
+}
+
+.header-ul {
+  color: RGB(192, 199, 208);
+  display: flex;
+  justify-content: space-around;
+  line-height: 70px;
+  font-weight: bolder;
+}
+
+.aside-left {
+  width: 200px;
+  border: 1px solid red;
+  margin: 30px 0 0 30px;
+}
+
+aside h1 {
+  font-style: italic;
+}
+
+.aside-right {
+  width: 250px;
+  height: 250px;
+  font-style: italic;
+  border: 1px solid red;
+  /*display: flex;*/
+  align-self: center;
+  background: RGB(245, 245, 245);
+  /*color: white;*/
+}
+
+.sign-in {
+  width: 100%;
+  height: 250px;
+  color: white;
+  background: RGB(245, 245, 245);
+  border: 1px solid red;
+}
+
+.main-content {
+  width: 860px;
+  height: 560px;
+  border: 1px solid red;
+  margin: 30px;
+}
