将近完成main-right的布局

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -52,13 +52,17 @@ aside h1 {
 }
 
 .aside-right {
-  width: 250px;
+  width: 300px;
   height: 250px;
   border: 1px solid red;
-  /*display: flex;*/
+  display: flex;
   align-self: center;
   background: RGB(245, 245, 245);
-  /*color: white;*/
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  /*justify-content: center;*/
+  align-items: center;
 }
 
 .sign-in {
@@ -70,7 +74,7 @@ aside h1 {
 }
 
 .main-content {
-  width: 860px;
+  width: 1020px;
   height: 700px;
   border: 1px solid red;
   margin: 30px;
@@ -83,4 +87,32 @@ aside h1 {
 
 .aside-left-archives {
   padding: 10px;
+}
+
+.form-control {
+  display: block;
+  width: 220px;
+  height: 50px;
+  padding: 0.375rem 0.75rem;
+  font-size: 1.1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.form-check {
+  margin-top: 15px;
+}
+
+.sign-in {
+  width: 220px;
+  height: 50px;
+  margin-top: 20px;
+  background: RGB(51, 124, 246);
+  color: white;
+  font-size: 22px;
 }
